test_suite/tests/ui/borrow/bad_lifetimes.stderr
error: failed to parse borrowed lifetimes: "zzz"
 --> $DIR/bad_lifetimes.rs:6:22
  |
6 |     #[serde(borrow = "zzz")]
  |                      ^^^^^

error: aborting due to previous error

