test_suite/tests/ui/borrow/bad_lifetimes.rs
#[macro_use]
extern crate serde_derive;

#[derive(Deserialize)]
struct Test<'a> {
    #[serde(borrow = "zzz")]
    s: &'a str,
}

fn main() {}
